# MongoDB-QT

./: CMakeLists.txt
